--- a/vue-cesium1/package.json
+++ b/vue-cesium1/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
+    "mitt": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
